--- a/scss/components/_popout.scss
+++ b/scss/components/_popout.scss
@@ -325,43 +325,71 @@ div[class*="root-"] {
   .dimmer { border-radius: 0; &.visible { background: rgba(0, 0, 0, .5); }}
 }
 
-.theme-dark .popout div[class*="emojiPicker-"] {
-  animation: emoji-picker 300ms;
-  background: var(--dark-primary) !important;
-  border: 1px solid var(--dark-primary);
-  border-radius: 0 0 3px 3px !important;
+.theme-dark .popout {
+  box-shadow: none;
 
-  div[class*="stickyHeader-"] { background: var(--dark-primary); }
-  div[class*="scrollerWrap-"] {
-    background: transparent !important;
+  div[class*="popoutList-"] { background: var(--dark-highlight); }
+  div[class*="searchBar-"] { background: var(--dark-primary); }
 
-    div[class*="emojiItem-"] {
-      @include transition(all 100ms ease);
-      background-position: 50% !important;
-      background-repeat: no-repeat !important;
-      background-size: contain !important;
+  div[class*="emojiPicker-"] {
+    animation: emoji-picker 300ms;
+    background: var(--dark-primary) !important;
+    border: 1px solid var(--dark-primary);
+    border-radius: 0 0 3px 3px !important;
+
+    div[class*="stickyHeader-"] { background: var(--dark-primary); }
+    div[class*="scrollerWrap-"] {
+      background: transparent !important;
+
+      div[class*="emojiItem-"] {
+        @include transition(all 100ms ease);
+        background-position: 50% !important;
+        background-repeat: no-repeat !important;
+        background-size: contain !important;
+      }
+
+      div[class*="selected-"] { background: var(--dark-secondary); }
     }
 
-    div[class*="selected-"] { background: var(--dark-secondary); }
-  }
+    div[class*="header-"] {
+      background-color: var(--dark-highlight);
+      border-bottom: 0;
 
-  div[class*="header-"] {
-    background-color: var(--dark-highlight);
-    border-bottom: 0;
-
-    .search-bar {
-      background-color: var(--dark-highlight) !important;
-      .search-bar-inner { background: transparent; font-weight: bolder; }
+      .search-bar {
+        background-color: var(--dark-highlight) !important;
+        .search-bar-inner { background: transparent; font-weight: bolder; }
+      }
     }
   }
-}
 
-.theme-dark .popout.no-shadow .emoji-picker {
-  background: var(--dark-primary) !important;
-  border: 0;
-  border-radius: 0 !important;
-  margin-bottom: -14px !important;
-  margin-right: 14px;
+  &.no-shadow .emoji-picker {
+    background: var(--dark-primary) !important;
+    border: 0;
+    border-radius: 0 !important;
+    margin-bottom: -14px !important;
+    margin-right: 14px;
+  }
+
+  div[class*="menu-"] {
+    background: var(--dark-highlight);
+    border-radius: 10px;
+
+    div[class*="item-"] {
+      @include transition(all 200ms ease-in-out);
+      color: #fff;
+      padding: 10px 30px 10px 20px;
+
+      &:hover {
+        @include transition(all 200ms ease-in-out);
+        @include transform(translateX(.5em));
+        background: transparent;
+      }
+    }
+
+    div[class*="separator-"] {
+      display: none;
+    }
+  }
 }
 
 .diversity-selector .popout {
@@ -476,15 +504,15 @@ div[class*="contextMenu-"] {
   color: #fff;
 }
 
-.region-select-modal {
+div[class*="regionSelectModal-"] {
   background: var(--dark-highlight);
 
-  .region-select-modal-header {
+  div[class*="regionSelectModalHeader-"] {
     color: #fff;
     text-transform: none;
   }
 
-  .region-select-modal-option {
+  div[class*="regionSelectModalOptions-"] div[class*="regionSelectModalOption-"] {
     @include transition(all 200ms ease);
     background-color: var(--dark-secondary);
     border: 2px solid #696969;
